--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,22 @@
+@import url('https://fonts.googleapis.com/css?family=Amatic+SC');
+body{
+  background: rgba(35,168,173,1);
+  background: -moz-linear-gradient(top, rgba(35,168,173,1) 0%, rgba(29,63,105,1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(35,168,173,1)), color-stop(100%, rgba(29,63,105,1)));
+  background: -webkit-linear-gradient(top, rgba(35,168,173,1) 0%, rgba(29,63,105,1) 100%);
+  background: -o-linear-gradient(top, rgba(35,168,173,1) 0%, rgba(29,63,105,1) 100%);
+  background: -ms-linear-gradient(top, rgba(35,168,173,1) 0%, rgba(29,63,105,1) 100%);
+  background: linear-gradient(to bottom, rgba(35,168,173,1) 0%, rgba(29,63,105,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#23a8ad', endColorstr='#1d3f69', GradientType=0 );
+  height: 100vh;
+}
 h1 {
   text-align: center;
+  padding-top: 30px;
+  font-family: 'Amatic SC', cursive;
+  color: #fff;
+  font-size: 40px;
+  margin-bottom: 0px;
 }
-button {
-  border-radius: 0%;
-  height: 26px;
-  font-size: 14px;
-}
+
+
