--- a/src/TodoAddTask.css
+++ b/src/TodoAddTask.css
@@ -1,14 +1,42 @@
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #6e6e6e;
+  font-size: 20px;
+  font-family: 'Amatic SC', cursive;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: #6e6e6e;
+  font-size: 20px;
+  font-family: 'Amatic SC', cursive;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: #6e6e6e;
+  font-size: 20px;
+  font-family: 'Amatic SC', cursive;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: #6e6e6e;
+  font-size: 20px;
+  font-family: 'Amatic SC', cursive;
+}
+
 .addTask {
   margin: auto;
   max-width: 500px;
   padding-top: 30px;
+  margin-bottom: 50px;
 }
 .addTask div {
-  float: left
+  float: left;
+  padding-bottom: 100px;
 }
 .addTask input {
-  width: 400px;
-  height: 20px;
+  width: 500px;
+  height: 50px;
+  border-radius: 10px;
+  background-color: #fff;
+  border: 3px solid #217c90;
+  padding-left: 20px;
+  font-size: 16px;
 }
 .addTask button {
   background-color: #1a7888;
